Fixed missing background

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url('images/dungeon.gif') no-repeat center center fixed;
+  background: url('../images/dungeon.gif') no-repeat center center fixed;
   background-size: cover;
   color: white;
   font-family: Verdana;
